--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -13,26 +13,26 @@ spring:
   #注册到nacos并使用该配置中心
   application:
     name: renren-fast
-  cloud:
-    nacos:
-      discovery:
-        server-addr: #nacos注册中心地址:8848
-      config:
-        name: renren-fast
-        server-addr: #nacos注册中心地址
-        namespace: 0a4ed40b-20a1-4f2c-a741-49279a883ffb
-    sentinel:
-      transport:
-        dashboard: localhost:8080
-  zipkin:
-    base-url: http://localhost:9411
-    sender:
-      type: web
-    discovery-client-enabled: false
-  #采样取值介于 0到1之间，1则表示全部收集
-  sleuth:
-    sampler:
-      probability: 1
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 192.168.64.130:8848
+#      config:
+#        name: renren-fast
+#        server-addr: 192.168.64.130:8848
+#        namespace: 0a4ed40b-20a1-4f2c-a741-49279a883ffb
+#    sentinel:
+#      transport:
+#        dashboard: 192.168.64.130:8080
+#  zipkin:
+#    base-url: http://192.168.64.130:9411
+#    sender:
+#      type: web
+#    discovery-client-enabled: false
+#  #采样取值介于 0到1之间，1则表示全部收集
+#  sleuth:
+#    sampler:
+#      probability: 1
 
 
 
@@ -51,7 +51,7 @@ spring:
   redis:
     open: false  # 是否开启redis缓存  true开启   false关闭
     database: 0
-    host: localhost
+    host: 192.168.64.130
     port: 6379
     password:    # 密码（默认为空）
     timeout: 6000ms  # 连接超时时长（毫秒）
