--- a/gulimall-auth-server/src/main/resources/application.yml
+++ b/gulimall-auth-server/src/main/resources/application.yml
@@ -4,12 +4,12 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: #nacos注册中心地址
+        server-addr: 192.168.64.130:8848
     sentinel:
       transport:
         dashboard: localhost:8080
   redis:
-    host: 192.168.56.102
+    host: 192.168.64.130
   session:
     store-type: redis
   zipkin:
