--- a/gulimall-cart/src/main/resources/application.yml
+++ b/gulimall-cart/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: #nacos注册中心地址
+        server-addr: 192.168.64.130:8848
     sentinel:
       transport:
         dashboard: localhost:8080
@@ -14,7 +14,7 @@ spring:
   thymeleaf:
     cache: false
   redis:
-    host: 192.168.56.102
+    host: 192.168.64.130
     session:
       store-type: redis
   zipkin:
