--- a/gulimall-gateway/src/main/resources/bootstrap.properties
+++ b/gulimall-gateway/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
 spring.application.name=gulimall-gateway
-spring.cloud.nacos.config.server-addr=#:8848
-spring.cloud.nacos.config.namespace=efff56d1-78a5-49cc-8592-710f9706f86d
+spring.cloud.nacos.config.server-addr=192.168.64.130:8848
+spring.cloud.nacos.config.namespace=39fa4752-6b35-4eb2-862b-ed6a5d270275
