--- a/gulimall-third-party/src/main/resources/application.yml
+++ b/gulimall-third-party/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: #nacos注册中心地址:8848
+        server-addr: 192.168.64.130:8848
     alicloud:
       access-key: #
       secret-key:  #
