--- a/renren-fast/src/main/resources/application-dev.yml
+++ b/renren-fast/src/main/resources/application-dev.yml
@@ -3,8 +3,8 @@ spring:
         type: com.alibaba.druid.pool.DruidDataSource
         druid:
             driver-class-name: com.mysql.jdbc.Driver
-            url: jdbc:mysql://#:3306/gulimall-admin
-#            url: jdbc:mysql://#:3306/gulimall-admin?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+            url: jdbc:mysql://192.168.64.130:3306/gulimall_admin
+#            url: jdbc:mysql://192.168.64.130:3306/gulimall_admin?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
             username: root
             password: root
             initial-size: 10
