--- a/renren-generator/pom.xml
+++ b/renren-generator/pom.xml
@@ -105,17 +105,17 @@
 			<version>${mysql.version}</version>
 		</dependency>
 		<!-- oracle驱动 -->
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>${oracle.version}</version>
-		</dependency>
+		<!--<dependency>-->
+		<!--	<groupId>com.oracle</groupId>-->
+		<!--	<artifactId>ojdbc6</artifactId>-->
+		<!--	<version>${oracle.version}</version>-->
+		<!--</dependency>-->
 		<!-- sqlserver驱动 -->
-		<dependency>
-			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>sqljdbc4</artifactId>
-			<version>${mssql.version}</version>
-		</dependency>
+		<!--<dependency>-->
+		<!--	<groupId>com.microsoft.sqlserver</groupId>-->
+		<!--	<artifactId>sqljdbc4</artifactId>-->
+		<!--	<version>${mssql.version}</version>-->
+		<!--</dependency>-->
 		<!-- postgresql驱动 -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -138,28 +138,28 @@
 		</plugins>
 	</build>
 
-	<repositories>
-		<repository>
-			<id>public</id>
-			<name>aliyun nexus</name>
-			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>public</id>
-			<name>aliyun nexus</name>
-			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
+	<!--<repositories>-->
+	<!--	<repository>-->
+	<!--		<id>public</id>-->
+	<!--		<name>aliyun nexus</name>-->
+	<!--		<url>http://maven.aliyun.com/nexus/content/groups/public/</url>-->
+	<!--		<releases>-->
+	<!--			<enabled>true</enabled>-->
+	<!--		</releases>-->
+	<!--	</repository>-->
+	<!--</repositories>-->
+	<!--<pluginRepositories>-->
+	<!--	<pluginRepository>-->
+	<!--		<id>public</id>-->
+	<!--		<name>aliyun nexus</name>-->
+	<!--		<url>http://maven.aliyun.com/nexus/content/groups/public/</url>-->
+	<!--		<releases>-->
+	<!--			<enabled>true</enabled>-->
+	<!--		</releases>-->
+	<!--		<snapshots>-->
+	<!--			<enabled>false</enabled>-->
+	<!--		</snapshots>-->
+	<!--	</pluginRepository>-->
+	<!--</pluginRepositories>-->
 
 </project>
