--- a/gulimall-member/src/main/resources/bootstrap.properties
+++ b/gulimall-member/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=gulimall-member
-spring.cloud.nacos.config.server-addr=#
-spring.cloud.nacos.config.namespace=a9bd3d0c-393b-4a86-be4b-dea89275ebb9
+spring.cloud.nacos.config.server-addr=192.168.64.130:8848
+spring.cloud.nacos.config.namespace=f8fb92e0-34a7-43e5-98d1-aadd12152158
 spring.cloud.nacos.config.file-extension=yaml
