--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -17,6 +17,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+            <version>5.8.11</version>
+        </dependency>
         <!--链路追踪-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
