--- a/gulimall-search/src/main/resources/bootstrap.properties
+++ b/gulimall-search/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=gulimall-search
-spring.cloud.nacos.config.server-addr=#
-spring.cloud.nacos.config.namespace=1e1a1111-1d60-4e6b-87a7-b59866d1285b
+spring.cloud.nacos.config.server-addr=192.168.64.130:8848
+spring.cloud.nacos.config.namespace=f8fb92e0-34a7-43e5-98d1-aadd12152158
 spring.cloud.nacos.config.file-extension=yaml
