--- a/gulimall-ware/src/main/resources/application.yml
+++ b/gulimall-ware/src/main/resources/application.yml
@@ -14,9 +14,9 @@ spring:
       transport:
         dashboard: localhost:8080
   rabbitmq:
-    host: #
-    username: niceseason
-    password: mo19960729
+    host: 192.168.64.130
+    username: admin
+    password: admin
     listener:
       simple:
         acknowledge-mode: manual
