--- a/gulimall-ware/src/main/resources/bootstrap.properties
+++ b/gulimall-ware/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=gulimall-ware
-spring.cloud.nacos.config.server-addr=#
-spring.cloud.nacos.config.namespace=ef990659-440b-4755-95c5-a7d1260b2874
+spring.cloud.nacos.config.server-addr=192.168.64.130:8848
+spring.cloud.nacos.config.namespace=f8fb92e0-34a7-43e5-98d1-aadd12152158
 spring.cloud.nacos.config.file-extension=yaml
